src/test/06-Errors/error-multi-decl-assign1.txt
error-multi-decl-assign1.ck:1:6: error: cannot '=>' from/to a multi-variable declaration
[1] 1 => int a, b, c;
         ^
